# curious-pipeline

./: Cargo.toml
examples/: pipeline.rs
src/: error.rs  lib.rs
src/broker/: broker.rs  error.rs  message.rs  mod.rs  subscriber_infos.rs
src/event/: event.rs  mod.rs
src/pipeline/: mod.rs  pipe.rs  pipeline.rs  pipeline_builder.rs
src/socket/: socket.rs
tests/: event.rs  pipeline.rs
