[package]
name = "curious-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.14.0", features = ["full"] }
tokio-test = "0.4.2"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
bytes = "1.1.0"
test-case = "1.2.1"
